@@ -376,6 +376,7 @@ Release 1.0 - 2009-03-08
 
 141. NUTCH-711 - Indexer failing after upgrade to Hadoop 0.19.1 (ab)
 
+142. NUTCH-684 - Dedup support for Solr. (dogacan)
 
 Release 0.9 - 2007-04-02
 
